[package]
name = "linuxthemestore"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
soup = "0.5.1"
qmetaobject = "0.2.10"
cstr = "0.2"
